--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.App{
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgba(17, 17, 17, 0.832);
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Logo{
+    width: 30rem;
+    animation: rotation 4s infinite linear;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
 }
